<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/preference_category_general_settings"/>

    <SwitchPreference
            android:key="@string/orientation_lock_key"
            android:title="@string/orientation_lock_title"
            android:summary="@string/orientation_lock_summary"
            android:defaultValue="@string/orientation_lock_default"/>

    <ListPreference
            android:title="@string/unit_type_title"
            android:key="@string/unit_type_key"
            android:summary="@string/unit_type_summary"
            android:entries="@array/unit_type_entry"
            android:entryValues="@array/unit_type_value"
            android:defaultValue="@string/unit_type_default"/>

    <ListPreference
            android:title="@string/zoom_level_title"
            android:key="@string/zoom_level_key"
            android:summary="@string/zoom_level_summary"
            android:entries="@array/zoom_level_entry"
            android:entryValues="@array/zoom_level_value"
            android:defaultValue="@string/zoom_level_default" />

</PreferenceScreen>